--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             padding: 10px 20px;
             font-size: 16px;
             color: #fff;
-            background-color: #007bff;
+            background-color: #738599;
             border: none;
             border-radius: 5px;
             cursor: pointer;
